[gd_scene load_steps=26 format=2]

[ext_resource path="res://dataFiles/Scripts/WindowManager.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://dataFiles/Img/ram.png" type="Texture" id=3]
[ext_resource path="res://dataFiles/Img/rem.png" type="Texture" id=4]
[ext_resource path="res://dataFiles/Scripts/3dScene.gd" type="Script" id=5]
[ext_resource path="res://dataFiles/Font/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://dataFiles/3D/levels/tardis/tardisInside.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/pyFiles/center.py" type="Script" id=8]
[ext_resource path="res://dataFiles/Programs/terminal.tscn" type="PackedScene" id=9]
[ext_resource path="res://dataFiles/player/FPS_controller_3.3/FPS.tscn" type="PackedScene" id=10]
[ext_resource path="res://dataFiles/Scripts/tardisInside.gd" type="Script" id=11]
[ext_resource path="res://dataFiles/Sound/Effects/tardisON.wav" type="AudioStream" id=12]
[ext_resource path="res://dataFiles/Sound/Effects/tardisidl.mp3" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=11]
size = 30
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.721569 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0196078, 0, 0.0352941, 1 )
corner_radius_top_left = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 514, 685 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.12549, 0.0117647, 0.235294, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.235294, 0.0352941, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0759647, 0, 0.147461, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.12549, 0.0117647, 0.235294, 1 )

[sub_resource type="DynamicFont" id=15]
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0196078, 0, 0.0352941, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 529, 703 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.188235, 0.00784314, 0.356863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.454902, 0, 1, 1 )
shadow_color = Color( 0, 0, 0, 0 )
anti_aliasing_size = 0.085

[node name="WindowManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="fps" type="Label" parent="."]
margin_left = 279.0
margin_top = 60.0
margin_right = 387.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
align = 1

[node name="topBar" type="Control" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 6.0
margin_right = -15.401
margin_bottom = 26.655
rect_min_size = Vector2( 1008.9, 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="topBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="left" type="Panel" parent="topBar/HBoxContainer"]
margin_right = 35.993
margin_bottom = 30.0
rect_min_size = Vector2( 35.993, 0 )
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="topBar/HBoxContainer/left"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Control" type="Control" parent="topBar/HBoxContainer/left/HBoxContainer"]
margin_right = 15.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="logo" type="Panel" parent="topBar/HBoxContainer/left/HBoxContainer"]
margin_left = 15.0
margin_right = 35.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 8 )

[node name="layer" type="Panel" parent="topBar/HBoxContainer"]
margin_left = 35.0
margin_right = 235.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_styles/panel = SubResource( 13 )

[node name="sep" type="Panel" parent="topBar/HBoxContainer"]
margin_left = 235.0
margin_right = 373.51
margin_bottom = 30.0
rect_min_size = Vector2( 138.51, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="center" type="Panel" parent="topBar/HBoxContainer"]
margin_left = 373.0
margin_right = 573.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_styles/panel = SubResource( 6 )

[node name="sep2" type="Panel" parent="topBar/HBoxContainer"]
margin_left = 573.0
margin_right = 773.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="systenInfo" type="Panel" parent="topBar/HBoxContainer"]
margin_left = 773.0
margin_right = 973.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_styles/panel = SubResource( 14 )

[node name="systemInfoSTRING" type="Label" parent="topBar/HBoxContainer/systenInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 15 )
align = 1
valign = 1

[node name="right" type="Panel" parent="topBar/HBoxContainer"]
margin_left = 973.0
margin_right = 1008.99
margin_bottom = 30.0
rect_min_size = Vector2( 35.993, 0 )
custom_styles/panel = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="topBar/HBoxContainer/right"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="logo" type="Panel" parent="topBar/HBoxContainer/right/HBoxContainer"]
margin_right = 20.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 9 )

[node name="Control" type="Control" parent="topBar/HBoxContainer/right/HBoxContainer"]
margin_left = 20.0
margin_right = 35.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="bottomBar" type="Control" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 562.0
margin_right = -8.17999
margin_bottom = 592.0
rect_min_size = Vector2( 1007.82, 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="bottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="left" type="Panel" parent="bottomBar/HBoxContainer"]
margin_right = 35.993
margin_bottom = 30.0
rect_min_size = Vector2( 35.993, 0 )
custom_styles/panel = SubResource( 3 )

[node name="layer" type="Panel" parent="bottomBar/HBoxContainer"]
margin_left = 35.0
margin_right = 303.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="center" type="Panel" parent="bottomBar/HBoxContainer"]
margin_left = 303.0
margin_right = 703.0
margin_bottom = 30.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 6 )
script = ExtResource( 8 )

[node name="system" type="Label" parent="bottomBar/HBoxContainer/center"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="sep2" type="Panel" parent="bottomBar/HBoxContainer"]
margin_left = 703.0
margin_right = 972.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="right" type="Panel" parent="bottomBar/HBoxContainer"]
margin_left = 972.0
margin_right = 1007.99
margin_bottom = 30.0
rect_min_size = Vector2( 35.993, 0 )
custom_styles/panel = SubResource( 4 )

[node name="info" type="Control" parent="."]
margin_left = 16.0
margin_top = 62.0
margin_right = 256.562
margin_bottom = 302.562
rect_min_size = Vector2( 240.562, 385.829 )
__meta__ = {
"_edit_lock_": true
}

[node name="shortcut" type="TextEdit" parent="info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
custom_styles/read_only = SubResource( 2 )
readonly = true
__meta__ = {
"_edit_lock_": true
}

[node name="terminal" parent="." instance=ExtResource( 9 )]
visible = false

[node name="3dScene" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="rotate" type="Spatial" parent="3dScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.607, -5.772 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="3dScene"]
environment = ExtResource( 2 )

[node name="OmniLight4" type="OmniLight" parent="3dScene"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 6.29078, -11.9611 )
light_energy = 0.162
light_bake_mode = 2
omni_range = 1038.59

[node name="tardisInside" parent="3dScene" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.239, -3.627, -22.083 )
script = ExtResource( 11 )

[node name="travelSound" type="AudioStreamPlayer" parent="3dScene/tardisInside"]
stream = ExtResource( 12 )

[node name="Camera" type="Camera" parent="3dScene/tardisInside"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.238797, 3.54166, 11.4412 )

[node name="tardisIdl" type="AudioStreamPlayer" parent="3dScene/tardisInside"]
stream = ExtResource( 13 )
volume_db = -8.0
autoplay = true

[node name="FPS" parent="3dScene" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.57931, -18.0134 )
